--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zdog": "^1.1.3"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
